 7. Don't add ios pad to bottom nav buttons, make padding inactive.
 8. When change theme, delay calling native update colours function by 250ms to
    allow CSS to be loaded.
 9. More intuitive shift select behaviour. Select an item, shift+select then
    selects from this to previously selected item.
10. Better invert selection icon.
11. Sort Radio entries by weight.

2.5.2
-----
1. Enable 'More' menu action in year entry of song info list.
2. Increase clickable/dragable size of desktop splitter to 12 px.
3. Fix broken revert of Podcast search.
4. Fix clock position.
5. Re-implement splitter to (hopefully) work-around issues.
6. Fix rating alignment in portrait view.

2.5.1
-----
1. Ensure no volume commands are performed unless relevant dialog open.
2. Re-add podcast searching, will be removed once LMS8.2 is released.
3. Fix adding (LMS 8.2) podcast feed to favourites.
4. Add 'More' menu to playlists and years.
5. Fix scrollbar themeing in server/player settings.

2.5.0
-----
 1. Fix text colour of album and track listings in now-playing if using a light
    theme with coloured toolbars.
 2. Don't allow to select sub-toolbar text, fixes odd issue on Android Chrome
    where pressing back button from seach field causes 'Music' to be selected!
 3. Disable ripple effects on subtoolbar buttons only.
 4. Disable button hover via setting CSS from javascript for mobile. Should not
    be required, but seems buttons remain stuck in hover after pressing.
 5. Show menu button, in 'Manage players' dialog, for fixed volume players where
    volume control is hidden.
 6. Minor tweaks for more Material Design 2 appearance.
 7. Better support for LM 8.2 podcasts plugin.
 8. Make contents of create/edit group dialog scrollable.
 9. Try not to show server/player settings page status messages in a toast if
    these have already been shown in an alert.
10. Fix showing multiple artists, etc, in track details.